<?xml version="1.0" encoding="utf-8"?><!--<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_signup"
    tools:context=".login.LoginActivity">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="end">

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/lbl_skip"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/login_img"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_17sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/lbl_fashion_floor_india"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/lbl_instruction_otp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/otp_bold"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_light"
            android:text="@string/lbl_last_instruction"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_11sdp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/lbl_continue_mob_no"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_btn_white_curve"
                android:elevation="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_bluecurve_leftside"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="+91"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_12sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/edtMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
                        android:fontFamily="@font/poppins_semibold"
                        android:hint="@string/hnt_mob_no"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/_5sdp"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/color_blue"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/bg_btn_white_curve"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:paddingTop="@dimen/_6sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:text="@string/btn_next"
                android:textAlignment="center"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/_13sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lbl_or"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_google"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_google" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/btn_google"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_btn_white_curve"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_fb_without_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/btn_facebook"
                    android:textColor="@color/color_fb"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>
          <!--  <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fbLoginBtn"
                android:layout_margin="@dimen/_5sdp"/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvprivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.1"
                android:text="@string/lbl_privacy_policy"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@color/color_white"
                android:backgroundTint="@color/color_white" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.1"
                android:text="@string/lbl_terms"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout><!--</androidx.core.widget.NestedScrollView>-->
