<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_180sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginTop="@dimen/_88sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:background="@drawable/bg_share_dialog"
    android:orientation="vertical"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp">


    <RelativeLayout
        android:id="@+id/rl_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_space"
        android:layout_marginEnd="@dimen/dimen_space"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/btn_recommend"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_recommend" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/divder_color" />

    <RelativeLayout
        android:id="@+id/rl_whatsnew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_space"
        android:layout_marginEnd="@dimen/dimen_space"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/whts_new"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_new" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/divder_color" />

    <RelativeLayout
        android:id="@+id/rl_low_to_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_space"
        android:layout_marginEnd="@dimen/dimen_space"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/price_low_to_high"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_price_sorting" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/divder_color" />

    <RelativeLayout
        android:id="@+id/rl_high_to_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_space"
        android:layout_marginEnd="@dimen/dimen_space"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvaddmargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/price_high_to_low"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:id="@+id/rdmargin"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_price_sorting" />


    </RelativeLayout>


</LinearLayout>